--- a/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
+++ b/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
@@ -16,8 +16,7 @@ data:
     #!/usr/bin/env bash
 
     #shellcheck disable=SC1091
-    source "/shim/umask.sh"
-    source "/shim/vpn.sh"
+    test -f "/scripts/umask.sh" && source "/scripts/umask.sh"
 
     if [[ ! -f "/config/config/config.ini" ]]; then
       printf "Copying over default configuration ... "
@@ -25,6 +24,7 @@ data:
       cp /app/config.ini /config/config/config.ini
     fi
 
+    #shellcheck disable=SC2086
     exec /usr/bin/python3 /app/bazarr.py --no-update --config /config ${EXTRA_ARGS}
 ---
 apiVersion: apps/v1
@@ -77,7 +77,7 @@ spec:
           claimName: bazarr-tvshows-pvc
       containers:
       - name: bazarr
-        image: ghcr.io/k8s-at-home/bazarr:v1.1.2@sha256:2b9b3bfc972c6a182d4fc5daf05c4ac727b6678cb6ce3ded6a8f44125ab6f10f
+        image: ghcr.io/onedr0p/bazarr:1.1.3@sha256:71175fa5cb05b1db648bb140717bda99ce57fedc0fbb3438b24274334feca4b8
         command: ["/bin/sh"]
         args: ["-c", "/app/entrypoint.sh"]
         ports:
