--- a/kubernetes/apps/media/radarr/radarr-deploy.yaml
+++ b/kubernetes/apps/media/radarr/radarr-deploy.yaml
@@ -36,10 +36,12 @@ spec:
         name: tmpvol
       containers:
       - name: radarr
-        image: ghcr.io/k8s-at-home/radarr:v4.2.4.6635
+        image: ghcr.io/onedr0p/radarr:4.2.4.6635@sha256:2fdb5719b9425c38493834cd7eeca0e8e20f35a1ed87c58e4575a7400c3cafb6
         ports:
         - containerPort: 7878
         env:
+        - name: RADARR__ANALYTICS_ENABLED
+          value: "False"
         - name: RADARR__URL_BASE
           value: /radarr
         volumeMounts:
