--- a/kubernetes/apps/media/sonarr/sonarr-deploy.yaml
+++ b/kubernetes/apps/media/sonarr/sonarr-deploy.yaml
@@ -34,10 +34,12 @@ spec:
         name: tmpvol
       containers:
       - name: sonarr
-        image: ghcr.io/k8s-at-home/sonarr:v3.0.9.1549
+        image: ghcr.io/onedr0p/sonarr:3.0.9.1549@sha256:7b121038c6e78b3035d45c312bf4aa32c99ae72e0985c14b464e8c032166b4bf
         ports:
         - containerPort: 8989
         env:
+        - name: SONARR__ANALYTICS_ENABLED
+          value: "False"
         - name: SONARR__URL_BASE
           value: /sonarr
         volumeMounts:
