fix: bazarr displaying wrong timezone

--- a/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
+++ b/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
@@ -82,6 +82,9 @@ spec:
         args: ["-c", "/app/entrypoint.sh"]
         ports:
         - containerPort: 6767
+        env:
+        - name: TZ
+          value: ${TIMEZONE}
         volumeMounts:
         - name: bazarr-volume
           mountPath: /config
