--- a/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
+++ b/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
@@ -75,6 +75,8 @@ spec:
       - name: tvshows-volume
         persistentVolumeClaim:
           claimName: bazarr-tvshows-pvc
+      - name: tmpvol
+        emptyDir: {}
       containers:
       - name: bazarr
         image: ghcr.io/onedr0p/bazarr:1.1.3@sha256:71175fa5cb05b1db648bb140717bda99ce57fedc0fbb3438b24274334feca4b8
@@ -98,6 +100,8 @@ spec:
           mountPath: /media/movies
         - name: tvshows-volume
           mountPath: /media/tvshows
+        - name: tmpvol
+          mountPath: /tmp
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
