--- a/kubernetes/infrastructure/secrets-sync/splunk-secret.yaml
+++ b/kubernetes/infrastructure/secrets-sync/splunk-secret.yaml
@@ -24,7 +24,7 @@ spec:
       key: password
     - objectName: splunk-shc-secret
       key: shc_secret
-  - secretName: splunk-otel-collector # k8s-secret-name
+  - secretName: splunk-otel-collector
     type: Opaque
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
@@ -33,7 +33,7 @@ spec:
       reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: monitor
     data:
     - objectName: splunk-hec-token
-      key: splunk_platform_hec_token # k8s-key
+      key: splunk_platform_hec_token
   parameters:
     usePodIdentity: "false" # dont unhash or you get boolean errors!
     keyvaultName: ${AZURE_VAULT_NAME}
