--- a/bare-metal/roles/k3s/tasks/presteps.yml
+++ b/bare-metal/roles/k3s/tasks/presteps.yml
@@ -74,11 +74,18 @@
   notify: Restart multipath systemd
 
 # https://github.com/lucas-clemente/quic-go/wiki/UDP-Receive-Buffer-Size
-# Leveraged by Cloudflared
-- name: Increase QUIC Buffer Size
+# https://splunk.github.io/splunk-connect-for-syslog/main/gettingstarted/quickstart_guide/
+# Leveraged by Cloudflared & splunk connect for syslog
+- name: Ensure values are set correctly in sysctl
   become: true
   ansible.posix.sysctl:
-    name: net.core.rmem_max
-    value: '2500000'
+    name: '{{ item.name }}'
+    value: '{{ item.value }}'
+    state: present
     sysctl_set: true
-    reload: true # default
+    reload: true
+  loop:
+    - name: net.core.rmem_default
+      value: '17039360'
+    - name: net.core.rmem_max
+      value: '17039360'
