--- a/kubernetes/namespaces/downloads.yaml
+++ b/kubernetes/namespaces/downloads.yaml
@@ -2,5 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: downloads
+  annotations:
+    splunk.com/index: k8s_apps
   labels:
     routed-gateway: "true"
