--- a/kubernetes/settings/production/settings.yaml
+++ b/kubernetes/settings/production/settings.yaml
@@ -21,3 +21,5 @@ data:
   NAS_IP: 192.168.0.11
 
   LONGHORN_S3_BUCKET: 's3://bucket-20220912-1654@us-east-1/'
+
+  SPLUNK_AZURE_ENDPOINT: https://chickenwafflesprodstore.blob.core.windows.net
