fix: minor fixes

--- a/kubernetes/helm/kustomization.yaml
+++ b/kubernetes/helm/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
 - kubernetes-reflector.yaml
 - reloader.yaml
 - splunk-operator.yaml
+- splunk-otel-collector.yaml
+- splunk-connect-for-syslog.yaml
