--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,6 @@ repos:
         args: ["--force-color"]
         pass_filenames: false
         always_run: true
-        files: \.(yaml|yml)$
+        files: \.(yml)$
         additional_dependencies:
           - .[core]
