--- a/bare-metal/inventory/inventory-prod.yml
+++ b/bare-metal/inventory/inventory-prod.yml
@@ -8,7 +8,7 @@ localhost:
     target_path: kubernetes/clusters/production
     kv_url: 'https://chickenwaffles-keyvault.vault.azure.net/'
     github_token: "{{ lookup('azure_keyvault_secret', 'github-token', vault_url=kv_url) }}"
-    
+
 k3s_cluster:
   hosts:
     monty:
@@ -25,7 +25,7 @@ k3s_cluster:
     ansible_python_interpreter: /usr/bin/python3
     nut_controller_address: 192.168.0.225
     k3s_registration_address: 192.168.0.225
-    kv_url: https://chickenwaffles-keyvault.vault.azure.net/
+    kv_url: 'https://chickenwaffles-keyvault.vault.azure.net/'
     PUSHOVER_APP_TOKEN: "{{ lookup('azure_keyvault_secret', 'pushover-app-token', vault_url=kv_url) }}"
     PUSHOVER_USER_TOKEN: "{{ lookup('azure_keyvault_secret', 'pushover-user-token', vault_url=kv_url) }}"
     nut_user_controller_password: "{{ lookup('azure_keyvault_secret', 'nut-user-controller-password', vault_url=kv_url) }}"
