--- a/bare-metal/k3scluster.yml
+++ b/bare-metal/k3scluster.yml
@@ -1,5 +1,5 @@
 - name: Build a cluster with a single control node
   hosts: k3s_cluster
   roles:
-    - name: k3s
-    - name: nut
+    - k3s
+    - nut
