--- a/bare-metal/requirements-frozen.txt
+++ b/bare-metal/requirements-frozen.txt
@@ -1,23 +1,49 @@
-ansible-core==2.13.5
+adal==1.2.7
+ansible-core==2.14.1
+applicationinsights==0.11.10
+argcomplete==1.12.3
+azure-cli-core==2.34.0
+azure-cli-telemetry==1.0.6
+azure-common==1.1.11
+azure-core==1.26.1
+azure-identity==1.7.0
+azure-keyvault==1.1.0
+azure-mgmt-core==1.3.2
+azure-nspkg==3.0.2
 bcrypt==4.0.1
 cachetools==5.2.0
-certifi==2022.9.24
+certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
-cryptography==38.0.3
-google-auth==2.14.1
+cryptography==38.0.4
+google-auth==2.15.0
+humanfriendly==10.0
 idna==3.4
+isodate==0.6.1
 Jinja2==3.1.2
+jmespath==1.0.1
+knack==0.9.0
 kubernetes==25.3.0
 MarkupSafe==2.1.1
+msal==1.20.0
+msal-extensions==0.3.1
+msrest==0.7.1
+msrestazure==0.6.4
 oauthlib==3.2.2
 packaging==21.3
-paramiko==2.11.0
+paramiko==2.12.0
+pkginfo==1.9.2
+portalocker==1.7.1
+psutil==5.9.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+Pygments==2.13.0
+PyJWT==2.6.0
 PyNaCl==1.5.0
+pyOpenSSL==22.1.0
 pyparsing==3.0.9
+PySocks==1.7.1
 python-dateutil==2.8.2
 PyYAML==6.0
 requests==2.28.1
@@ -25,5 +51,8 @@ requests-oauthlib==1.3.1
 resolvelib==0.8.1
 rsa==4.9
 six==1.16.0
-urllib3==1.26.12
+tabulate==0.9.0
+typing_extensions==4.4.0
+urllib3==1.26.13
 websocket-client==1.4.2
+xmltodict==0.13.0
