--- a/bare-metal/roles/k3s/tasks/presteps.yml
+++ b/bare-metal/roles/k3s/tasks/presteps.yml
@@ -26,7 +26,7 @@
     name: nfs-common
     update_cache: true
 
-- name: adjust timeout
+- name: Adjust timeout
   become: true
   ansible.builtin.blockinfile:
     path: /etc/systemd/system.conf
