--- a/bare-metal/roles/nut/tasks/main.yml
+++ b/bare-metal/roles/nut/tasks/main.yml
@@ -1,8 +1,16 @@
+- name: Fix KeyvaultErrorException not defined error # https://github.com/Azure/azure_preview_modules/issues/324
+  ansible.builtin.replace:
+    path: ../.venv/lib64/python3.11/site-packages/azure/keyvault/key_vault_authentication.py
+    regexp: 'inspect\.getargspec'
+    replace: 'inspect.getfullargspec'
+  when:
+    - ansible_python_version is version('3.11.0', '>=')
+
 - name: Kubernetes Role Create
   ansible.builtin.include_tasks: kubernetes.yml
   when:
     - nut_controller_node is defined
-    - nut_controller_node  
+    - nut_controller_node
 
 # from https://github.com/akusei/pushover-bash
 - name: Pushover
