--- a/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
+++ b/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
@@ -100,7 +100,7 @@ metadata:
 spec:
   ingressClassName: nginx-internal
   rules:
-  - host: jellyfin.chickenwaffles.net
+  - host: jellyfin.${DOMAIN_NAME}
     http:
       paths:
       - path: /
