--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,5 @@
 ---
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: debug-statements
-      - id: double-quote-string-fixer
-      - id: name-tests-test
-      - id: requirements-txt-fixer
   - repo: local
     hooks:
       - id: ansible-lint
@@ -21,3 +12,21 @@ repos:
         files: \.(yml)$
         additional_dependencies:
           - .[core]
+      - id: end-of-file-fixer
+        name: fix end of files
+        description: ensures that a file is either empty, or ends with one newline.
+        entry: .venv/bin/end-of-file-fixer
+        language: python
+        types: [text]
+      - id: requirements-txt-fixer
+        name: fix requirements.txt
+        description: sorts entries in requirements.txt.
+        entry: .venv/bin/requirements-txt-fixer
+        language: python
+        files: requirements.*\.txt$
+      - id: trailing-whitespace
+        name: trim trailing whitespace
+        description: trims trailing whitespace.
+        entry: .venv/bin/trailing-whitespace-fixer
+        language: python
+        types: [text]
