--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -5,27 +5,34 @@ attrs==22.2.0
 black==22.12.0
 bracex==2.3.post1
 cffi==1.15.1
+cfgv==3.3.1
 click==8.1.3
 commonmark==0.9.1
-cryptography==38.0.4
+cryptography==39.0.0
+distlib==0.3.6
 filelock==3.9.0
+identify==2.5.12
 Jinja2==3.1.2
 jsonschema==4.17.3
 MarkupSafe==2.1.1
 mypy-extensions==0.4.3
+nodeenv==1.7.0
 packaging==22.0
 pathspec==0.10.3
 pip==22.3.1
 platformdirs==2.6.2
+pre-commit==2.21.0
+pre-commit-hooks==4.4.0
 pycparser==2.21
-Pygments==2.13.0
+Pygments==2.14.0
 pyrsistent==0.19.3
 PyYAML==6.0
 resolvelib==0.8.1
-rich==13.0.0
+rich==13.0.1
 ruamel.yaml==0.17.21
 setuptools==65.6.3
 subprocess-tee==0.4.1
+virtualenv==20.17.1
 wcmatch==8.4.1
 wheel==0.38.4
 yamllint==1.28.0
