chore: disable prowlarr authentication

--- a/kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
+++ b/kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
@@ -32,6 +32,8 @@ spec:
         ports:
         - containerPort: 9696
         env:
+        - name: PROWLARR__AUTHENTICATION_METHOD
+          value: External
         - name: PROWLARR__ANALYTICS_ENABLED
           value: "False"
         - name: PROWLARR__URL_BASE
