feat: inject initial secrets
1. Force ansible playbooks to fail if keyvault values not provided
2. Provide Azure KV secrets for secrets-sync (previously flux deploys would fail as secret for secrets-sync first needed to be created manually).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "terminal.integrated.defaultProfile.windows": "Ubuntu-20.04 (WSL)",
     "ansible.python.interpreterPath": ".venv/bin/python3",
     "extensions.ignoreRecommendations": true,
-    "ansible.ansible.path": ".venv/bin/ansible"
+    "ansible.ansible.path": ".venv/bin/ansible",
+    "files.insertFinalNewline": true
 }
