--- a/bare-metal/inventory/inventory-prod.yml
+++ b/bare-metal/inventory/inventory-prod.yml
@@ -26,6 +26,8 @@ k3s_cluster:
     nut_controller_address: 192.168.0.225
     k3s_registration_address: 192.168.0.225
     kv_url: 'https://chickenwaffles-keyvault.vault.azure.net/'
+    KEYVAULT_CLIENT_ID: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-client-id', vault_url=kv_url) }}"
+    KEYVAULT_SECRET: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-secret', vault_url=kv_url) }}"
     PUSHOVER_APP_TOKEN: "{{ lookup('azure_keyvault_secret', 'pushover-app-token', vault_url=kv_url) }}"
     PUSHOVER_USER_TOKEN: "{{ lookup('azure_keyvault_secret', 'pushover-user-token', vault_url=kv_url) }}"
     nut_user_controller_password: "{{ lookup('azure_keyvault_secret', 'nut-user-controller-password', vault_url=kv_url) }}"
