--- a/bare-metal/k3scluster.yml
+++ b/bare-metal/k3scluster.yml
@@ -1,5 +1,20 @@
 - name: Build a cluster with a single control node
   hosts: k3s_cluster
+  pre_tasks:
+    - name: Get Azure Keyvault connection values
+      ansible.builtin.set_fact:
+        azure_client_id: "{{ lookup('ansible.builtin.env', 'AZURE_CLIENT_ID') }}"
+        azure_secret: "{{ lookup('ansible.builtin.env', 'AZURE_SECRET') }}"
+        azure_tenant: "{{ lookup('ansible.builtin.env', 'AZURE_TENANT') }}"
+      no_log: true
+      delegate_to: localhost
+
+    - name: Fail if Keyvault values don't exist
+      ansible.builtin.fail:
+        msg: "No value for either AZURE_CLIENT_ID or AZURE_SECRET or AZURE_TENANT"
+      when: azure_client_id == "" or azure_secret == "" or azure_tenant == ""
+      delegate_to: localhost
+
   roles:
     - k3s
     - nut
