--- a/bare-metal/localhost.yml
+++ b/bare-metal/localhost.yml
@@ -2,5 +2,18 @@
   hosts: localhost
   connection: local
   become: true
+  pre_tasks:
+    - name: Get Azure Keyvault connection values
+      ansible.builtin.set_fact:
+        azure_client_id: "{{ lookup('ansible.builtin.env', 'AZURE_CLIENT_ID') }}"
+        azure_secret: "{{ lookup('ansible.builtin.env', 'AZURE_SECRET') }}"
+        azure_tenant: "{{ lookup('ansible.builtin.env', 'AZURE_TENANT') }}"
+      no_log: true
+
+    - name: Fail if Keyvault values don't exist
+      ansible.builtin.fail:
+        msg: "No value for either AZURE_CLIENT_ID or AZURE_SECRET or AZURE_TENANT"
+      when: azure_client_id == "" or azure_secret == "" or azure_tenant == ""
+
   roles:
     - flux
