--- a/kubernetes/helm/kustomization.yaml
+++ b/kubernetes/helm/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- csi-secrets-store-provider-azure.yaml
 - k8s-at-home-charts.yaml
 - k8s-at-home-library.yaml
 - kubernetes-reflector.yaml
