--- a/kubernetes/infrastructure/kube-system/kustomization.yaml
+++ b/kubernetes/infrastructure/kube-system/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- provider-azure-installer.yaml
+- azure-secrets-helm-release.yaml # also installs secrets-store-csi-driver
