feat: replace nginx with helm releases
Also rename external nginx

--- a/kubernetes/apps/downloads/jdownloader/jdownloader-deploy.yaml
+++ b/kubernetes/apps/downloads/jdownloader/jdownloader-deploy.yaml
@@ -71,7 +71,7 @@ metadata:
   name: jdownloader-ingress
   namespace: downloads
 spec:
-  ingressClassName: nginx
+  ingressClassName: nginx-external
   rules:
   - host: jdownloader.${DOMAIN_NAME}
     http:
