--- a/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
+++ b/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
@@ -132,7 +132,7 @@ metadata:
   name: bazarr-ingress
   namespace: media
 spec:
-  ingressClassName: nginx
+  ingressClassName: nginx-external
   rules:
   - host: media.${DOMAIN_NAME}
     http:
