--- a/kubernetes/apps/media/sonarr/sonarr-deploy.yaml
+++ b/kubernetes/apps/media/sonarr/sonarr-deploy.yaml
@@ -79,7 +79,7 @@ metadata:
   name: sonarr-ingress
   namespace: media
 spec:
-  ingressClassName: nginx
+  ingressClassName: nginx-external
   rules:
   - host: media.${DOMAIN_NAME}
     http:
