--- a/kubernetes/namespaces/kustomization.yaml
+++ b/kubernetes/namespaces/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - downloads-vpn.yaml
 - external.yaml
 - home-automation.yaml
+- ingress.yaml
 - media.yaml
 - monitor.yaml
 - reloader.yaml
