fix: nginx buffering client request to file

--- a/kubernetes/monitor/splunk/splunk-deploy.yaml
+++ b/kubernetes/monitor/splunk/splunk-deploy.yaml
@@ -57,6 +57,7 @@ metadata:
   namespace: monitor
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-issuer
+    nginx.ingress.kubernetes.io/client-body-buffer-size: 10M
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
