feat: application updates
Update:
- Cert-manager: 1.10.0 -> 1.11.0
- Flux: 0.34.0 -> 0.38.3
- Cloudflared: 2022.11.0 -> 2022.12.1
- External DNS: 0.12.2 -> 0.13.1
- Reloader: 0.0.124 -> 1.0.2

--- a/bare-metal/inventory/inventory-develop.yml
+++ b/bare-metal/inventory/inventory-develop.yml
@@ -3,8 +3,9 @@ localhost:
   hosts:
     127.0.0.1
   vars:
+    flux_version: 0.38.3
     ansible_connection: local
-    branch: ingress-metallb
+    branch: main
     target_path: kubernetes/clusters/develop
     kv_url: 'https://chickenwaffles-vault-dev.vault.azure.net/'
     github_token: "{{ lookup('azure_keyvault_secret', 'github-token', vault_url=kv_url) }}"
@@ -17,6 +18,7 @@ k3s_cluster:
     node1:
       ansible_host: 192.168.0.7
   vars:
+    k3s_release_version: v1.24.6+k3s1
     ansible_connection: paramiko # don't need to apt-get sshpass
     ansible_user: colin
     ansible_python_interpreter: /usr/bin/python3
