fix: ingress issues
1. Ingress not logging external IP in logs
2. Fix error "ignoring ingress XX in XX based on annotation : no object matching key "nginx-XX" in local store"

--- a/kubernetes/infrastructure/ingress/internal-helm-release.yaml
+++ b/kubernetes/infrastructure/ingress/internal-helm-release.yaml
@@ -25,6 +25,9 @@ spec:
         registry: registry.k8s.io
         tag: v1.5.1
 
+      ingressClass: nginx-internal
+      ingressClassByName: true
+
       ingressClassResource:
         name: nginx-internal
         enabled: true
@@ -34,3 +37,6 @@ spec:
       service:
         annotations:
           metallb.universe.tf/loadBalancerIPs: ${INGRESS_INTERNAL_IP}
+        externalTrafficPolicy: Local
+
+      watchIngressWithoutClass: false
