--- a/kubernetes/infrastructure/ingress/external-helm-release.yaml
+++ b/kubernetes/infrastructure/ingress/external-helm-release.yaml
@@ -25,6 +25,9 @@ spec:
         registry: registry.k8s.io
         tag: v1.5.1
 
+      ingressClass: nginx-external
+      ingressClassByName: true
+
       ingressClassResource:
         name: nginx-external
         enabled: true
@@ -34,3 +37,6 @@ spec:
       service:
         annotations:
           metallb.universe.tf/loadBalancerIPs: ${INGRESS_EXTERNAL_IP}
+        externalTrafficPolicy: Local
+
+      watchIngressWithoutClass: false
