--- a/kubernetes/apps/downloads/downloads-network-policy.yaml
+++ b/kubernetes/apps/downloads/downloads-network-policy.yaml
@@ -6,15 +6,13 @@ metadata:
 spec:
   podSelector: {}
   ingress:
-  - from:
-    # Only allow ingress from K8S
-    - ipBlock:
-        cidr: 10.0.0.0/8
+    - from: # Only allow ingress from K8S
+        - ipBlock:
+            cidr: 10.0.0.0/8
   egress:
-  - to:
-    # Only allow egress to K8S
-    - ipBlock:
-        cidr: 10.0.0.0/8
+    - to: # Only allow egress to K8S
+        - ipBlock:
+            cidr: 10.0.0.0/8
   policyTypes:
     - Ingress
     - Egress
