--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -1,38 +1,38 @@
-ansible-compat==2.2.7
-ansible-core==2.14.1
-ansible-lint==6.10.0
+ansible-core==2.14.2
+ansible-lint==6.13.1
 attrs==22.2.0
-black==22.12.0
+black==23.1.0
 bracex==2.3.post1
 cffi==1.15.1
 cfgv==3.3.1
 click==8.1.3
-commonmark==0.9.1
-cryptography==39.0.0
+cryptography==39.0.1
 distlib==0.3.6
 filelock==3.9.0
-identify==2.5.12
+identify==2.5.18
 Jinja2==3.1.2
 jsonschema==4.17.3
-MarkupSafe==2.1.1
-mypy-extensions==0.4.3
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+mypy-extensions==1.0.0
 nodeenv==1.7.0
-packaging==22.0
-pathspec==0.10.3
-pip==22.3.1
-platformdirs==2.6.2
-pre-commit==2.21.0
+packaging==23.0
+pathspec==0.11.0
+pip==23.0.1
+platformdirs==3.0.0
+pre-commit==3.0.4
 pre-commit-hooks==4.4.0
 pycparser==2.21
 Pygments==2.14.0
 pyrsistent==0.19.3
 PyYAML==6.0
 resolvelib==0.8.1
-rich==13.0.1
+rich==13.3.1
 ruamel.yaml==0.17.21
-setuptools==65.6.3
+setuptools==67.3.2
 subprocess-tee==0.4.1
-virtualenv==20.17.1
+virtualenv==20.19.0
 wcmatch==8.4.1
 wheel==0.38.4
-yamllint==1.28.0
+yamllint==1.29.0
