--- a/kubernetes/infrastructure/kube-system/kustomization.yaml
+++ b/kubernetes/infrastructure/kube-system/kustomization.yaml
@@ -3,3 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - azure-secrets-helm-release.yaml # also installs secrets-store-csi-driver
+  - reloader-helm-release.yaml
