--- a/kubernetes/infrastructure/kustomization.yaml
+++ b/kubernetes/infrastructure/kustomization.yaml
@@ -2,8 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - reloader
-  - kube-system
+  - kube-system # azure-secrets & reloader
   - secrets-sync # central location of creds and synced to where needed
   - cert-manager
   - metallb
