--- a/kubernetes/settings/develop/settings.yaml
+++ b/kubernetes/settings/develop/settings.yaml
@@ -9,6 +9,7 @@ data:
   METAL_LB_RANGE: 192.168.0.11-192.168.0.13
   INGRESS_EXTERNAL_IP: 192.168.0.11
   INGRESS_INTERNAL_IP: 192.168.0.12
+  LOGGING_INGRESS_INTERNAL_IP: 192.168.0.20
   UNIFI_IP: 192.168.0.13
 
   AZURE_VAULT_NAME: chickenwaffles-vault-dev
