--- a/kubernetes/settings/production/settings.yaml
+++ b/kubernetes/settings/production/settings.yaml
@@ -11,6 +11,7 @@ data:
   METAL_LB_RANGE: 192.168.0.241-192.168.0.254
   INGRESS_EXTERNAL_IP: 192.168.0.241
   INGRESS_INTERNAL_IP: 192.168.0.242
+  LOGGING_INGRESS_INTERNAL_IP: 192.168.0.250
   UNIFI_IP: 192.168.0.243
   MQTT_IP: 192.168.0.244
 
