--- a/kubernetes/infrastructure/ingress/kustomization.yaml
+++ b/kubernetes/infrastructure/ingress/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - internal-helm-release.yaml
-  - external-helm-release.yaml
+  - internal-helm-release.yaml # resources only allowed internally
+  - external-helm-release.yaml # resources allowed internally & externally
+  - logging-internal-helm-release.yaml # special ingress for logs - nginx logs not ingested by splunk
