--- a/kubernetes/infrastructure/external/external-dns-deploy.yaml
+++ b/kubernetes/infrastructure/external/external-dns-deploy.yaml
@@ -55,7 +55,7 @@ spec:
       serviceAccountName: external-dns
       containers:
         - name: external-dns
-          image: k8s.gcr.io/external-dns/external-dns:v0.13.1
+          image: registry.k8s.io/external-dns/external-dns:v0.13.1
           args:
             - --log-level=info
             - --source=service # ingress is also possible
