--- a/kubernetes/apps/downloads/qbittorrent/kustomization.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/kustomization.yaml
@@ -2,8 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - sabnzbd
-  - transmission
-  - qbittorrent
+  - qbittorrent-configuration.yaml
+  - qbittorrent-deploy.yaml
+  - qbittorrent-nfs-downloads.yaml
+  - qbittorrent-volume.yaml
