--- a/kubernetes/infrastructure/longhorn/kustomization.yaml
+++ b/kubernetes/infrastructure/longhorn/kustomization.yaml
@@ -2,7 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - crd
+  - snapshot-controller
   - longhorn-default-settings.yaml
   - longhorn-ingress.yaml
+  - longhorn-snapshot-class.yaml
   - longhorn-snapshot.yaml
   - longhorn-backups.yaml
