--- a/kubernetes/monitor/splunk-syslog/kustomization.yaml
+++ b/kubernetes/monitor/splunk-syslog/kustomization.yaml
@@ -2,6 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - transmission-volume.yaml
-  - transmission-nfs-downloads.yaml
-  - transmission-deploy.yaml
+  - syslog-install.yaml
