--- a/kubernetes/apps/home-automation/home-assistant/hass-deploy.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/hass-deploy.yaml
@@ -26,7 +26,7 @@ spec:
             claimName: hass-volume-pvc
       containers:
         - name: homeassistant
-          image: homeassistant/home-assistant:2022.10.4
+          image: ghcr.io/home-assistant/home-assistant:2023.5.2@sha256:1b961b865ec8679f3dc438a41ce4b1ed0114b19a6757f311186d3553cfc0eb8d
           ports:
             - containerPort: 8123
           env:
