--- a/kubernetes/apps/media/openbooks/openbooks-deploy.yaml
+++ b/kubernetes/apps/media/openbooks/openbooks-deploy.yaml
@@ -26,7 +26,7 @@ spec:
             claimName: openbooks-books-pvc
       containers:
         - name: openbooks
-          image: evanbuss/openbooks:4.5.0
+          image: ghcr.io/evan-buss/openbooks:4.5.0
           ports:
             - containerPort: 5228
           args:
