--- a/kubernetes/monitor/splunk-syslog/syslog-install.yaml
+++ b/kubernetes/monitor/splunk-syslog/syslog-install.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: release-name-splunk-connect-for-syslog
+  name: splunk-connect-for-syslog
   namespace: monitor
   labels:
     helm.sh/chart: splunk-connect-for-syslog-2.49.3
@@ -22,14 +22,44 @@ metadata:
 #data:
 #  hec_token: YmFuYW5h
 #---
+# Source: splunk-connect-for-syslog/templates/config-configmap.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: splunk-connect-for-syslog-config
+  namespace: monitor
+  labels:
+    helm.sh/chart: splunk-connect-for-syslog-2.49.3
+    app.kubernetes.io/name: splunk-connect-for-syslog
+    app.kubernetes.io/instance: release-name
+    app.kubernetes.io/version: "2.49.3"
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: "input"
+    app.kubernetes.io/part-of: "Splunk"
+data:
+  app-vps-mikrotik_routeros.conf: |-
+    #/etc/syslog-ng/conf.d/configmap/config/app_parsers/app-vps-mikrotik_routeros.conf
+
+    application app-vps-mikrotik_routeros[sc4s-vps] {
+      filter {
+              host("steffy" type(string) flags(prefix))
+          };
+          parser {
+              p_set_netsource_fields(
+                  vendor('mikrotik')
+                  product('routeros')
+              );
+          };
+      };
+---
 # Source: splunk-connect-for-syslog/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-name-splunk-connect-for-syslog-tcp
+  name: splunk-connect-for-syslog-tcp
   namespace: monitor
   annotations:
-    metallb.universe.tf/allow-shared-ip: "splunk-connect"
+    metallb.universe.tf/allow-shared-ip: splunk-syslog
     metallb.universe.tf/loadBalancerIPs: ${SYSLOG_IP}
   labels:
     helm.sh/chart: splunk-connect-for-syslog-2.49.3
@@ -39,7 +69,6 @@ metadata:
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
-
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
@@ -48,18 +77,18 @@ spec:
       targetPort: bsd-dflt-tcp
       protocol: TCP
       name: bsd-dflt-tcp
-    - port: 6514
-      targetPort: bsd-dflt-tls
-      protocol: TCP
-      name: bsd-dflt-tls
-    - port: 601
-      targetPort: ietf-dflt-tcp
-      protocol: TCP
-      name: ietf-dflt-tcp
-    - port: 5425
-      targetPort: ietf-dflt-tls
-      protocol: TCP
-      name: ietf-dflt-tls
+#    - port: 6514
+#      targetPort: bsd-dflt-tls
+#      protocol: TCP
+#      name: bsd-dflt-tls
+#    - port: 601
+#      targetPort: ietf-dflt-tcp
+#      protocol: TCP
+#      name: ietf-dflt-tcp
+#    - port: 5425
+#      targetPort: ietf-dflt-tls
+#      protocol: TCP
+#      name: ietf-dflt-tls
   selector:
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
@@ -68,10 +97,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: release-name-splunk-connect-for-syslog-udp
+  name: splunk-connect-for-syslog-udp
   namespace: monitor
   annotations:
-    metallb.universe.tf/allow-shared-ip: "splunk-connect"
+    metallb.universe.tf/allow-shared-ip: splunk-syslog
     metallb.universe.tf/loadBalancerIPs: ${SYSLOG_IP}
   labels:
     helm.sh/chart: splunk-connect-for-syslog-2.49.3
@@ -89,10 +118,10 @@ spec:
       targetPort: bsd-dflt-udp
       protocol: UDP
       name: bsd-dflt-udp
-    - port: 601
-      targetPort: ietf-dflt-udp
-      protocol: UDP
-      name: ietf-dflt-udp
+#    - port: 601
+#      targetPort: ietf-dflt-udp
+#      protocol: UDP
+#      name: ietf-dflt-udp
   selector:
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
@@ -101,7 +130,7 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: release-name-splunk-connect-for-syslog
+  name: splunk-connect-for-syslog
   namespace: monitor
   labels:
     helm.sh/chart: splunk-connect-for-syslog-2.49.3
@@ -112,8 +141,8 @@ metadata:
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
 spec:
-  serviceName: release-name-splunk-connect-for-syslog
-  replicas: 2
+  serviceName: splunk-connect-for-syslog
+  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: splunk-connect-for-syslog
@@ -124,43 +153,39 @@ spec:
         app.kubernetes.io/name: splunk-connect-for-syslog
         app.kubernetes.io/instance: release-name
     spec:
-      serviceAccountName: release-name-splunk-connect-for-syslog
-      securityContext:
-        {}
+      serviceAccountName: splunk-connect-for-syslog
+      volumes:
+        - name: syslog-ng-var
+          emptyDir:
+            medium: Memory
+            sizeLimit: 64Mi
+        - name: config
+          configMap:
+            name: splunk-connect-for-syslog-config
       containers:
         - name: splunk-connect-for-syslog
-          #securityContext:
-          #  capabilities:
-          #    drop:
-          #    - ALL
-            #readOnlyRootFilesystem: true
-            #runAsNonRoot: true
-            #runAsUser: 1000
-          image: "ghcr.io/splunk/splunk-connect-for-syslog/container2:2.49.3"
+          image: ghcr.io/splunk/splunk-connect-for-syslog/container2:2.49.3
           imagePullPolicy: IfNotPresent
           env:
-          - name: SC4S_SNMP_TRAP_COLLECT
-            value: "no"
-          - name: SC4S_CONTAINER_HOST
-            valueFrom:
-              fieldRef:
-                fieldPath: spec.nodeName
-          - name: SC4S_RUNTIME_ENV
-            value: "k8s"
-          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_URL
-            value: "https://splunk-hec.${DOMAIN_NAME}/services/collector/event"
-          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TOKEN
-            valueFrom:
-              secretKeyRef:
-                key: hec_token
-                name: splunk-monitor-secret
-          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TLS_VERIFY
-            value: "no"
-          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_DISKBUFF_ENABLE
-            value: "yes"
-          - name: SC4S_SOURCE_TLS_ENABLE
-            value: "no"
-
+            - name: SC4S_SNMP_TRAP_COLLECT
+              value: "no"
+            - name: SC4S_RUNTIME_ENV
+              value: "k8s"
+            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_URL
+              value: "https://splunk-hec.${DOMAIN_NAME}/services/collector/event"
+            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  key: hec_token
+                  name: splunk-monitor-secret
+            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TLS_VERIFY
+              value: "no"
+            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_DISKBUFF_ENABLE
+              value: "yes"
+            - name: SC4S_SOURCE_TLS_ENABLE
+              value: "no"
+            #- name: SC4S_SOURCE_STORE_RAWMSG
+            #  value: "yes"
           ports:
             - name: bsd-dflt-tcp
               containerPort: 514
@@ -168,24 +193,27 @@ spec:
             - name: bsd-dflt-udp
               containerPort: 514
               protocol: UDP
-            - name: bsd-dflt-tls
-              containerPort: 6514
-              protocol: TCP
-            - name: ietf-dflt-tcp
-              containerPort: 601
-              protocol: TCP
-            - name: ietf-dflt-udp
-              containerPort: 601
-              protocol: UDP
-            - name: ietf-dflt-tls
-              containerPort: 5425
-              protocol: TCP
+            #- name: bsd-dflt-tls
+            #  containerPort: 6514
+            #  protocol: TCP
+            #- name: ietf-dflt-tcp
+            #  containerPort: 601
+            #  protocol: TCP
+            #- name: ietf-dflt-udp
+            #  containerPort: 601
+            #  protocol: UDP
+            #- name: ietf-dflt-tls
+            #  containerPort: 5425
+            #  protocol: TCP
             - name: health
               containerPort: 8080
               protocol: TCP
           volumeMounts:
-          - name: data
-            mountPath: /var/lib/syslog-ng/
+            - name: syslog-ng-var
+              mountPath: /var/lib/syslog-ng
+            - name: config
+              mountPath: /etc/syslog-ng/conf.d/configmap/config/app_parsers
+              readOnly: true
           livenessProbe:
             httpGet:
               path: /healthz
@@ -201,12 +229,8 @@ spec:
             failureThreshold: 60
             periodSeconds: 10
             timeoutSeconds: 5
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: local-path
-      resources:
-        requests:
-          storage: "2Gi"
+          securityContext:
+          # don't set ROFS, prevent perm elevations - this will break container
+            capabilities:
+              drop:
+                - ALL
