feat: upgrade longhorn, metallb and cert-manager

--- a/kubernetes/infrastructure/longhorn/longhorn-default-settings.yaml
+++ b/kubernetes/infrastructure/longhorn/longhorn-default-settings.yaml
@@ -6,7 +6,8 @@ metadata:
   namespace: longhorn-system
 data:
   default-setting.yaml: |-
-    allow-node-drain-with-last-healthy-replica: "true"
+    allow-node-drain-with-last-healthy-replica: "true" # deprecate in v1.5.0
+    node-drain-policy: always-allow
     default-data-locality: best-effort
     allow-volume-creation-with-degraded-availability: "false"
     replica-auto-balance: best-effort
