--- a/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
+++ b/kubernetes/apps/media/bazarr/bazarr-deployment.yaml
@@ -76,7 +76,9 @@ spec:
           persistentVolumeClaim:
             claimName: bazarr-tvshows-pvc
         - name: tmpvol
-          emptyDir: {}
+          emptyDir:
+            medium: Memory
+            sizeLimit: 64Mi
       containers:
         - name: bazarr
           image: ghcr.io/onedr0p/bazarr:1.2.1@sha256:dc9fb4ae4e1d3724bff06224dc640429ff56c0326057b4a14000d2fbd84a7703
