--- a/kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
+++ b/kubernetes/apps/media/prowlarr/prowlarr-deploy.yaml
@@ -24,8 +24,10 @@ spec:
         - name: prowlarr-volume
           persistentVolumeClaim:
             claimName: prowlarr-volume-pvc
-        - emptyDir: {}
-          name: tmpvol
+        - name: tmpvol
+          emptyDir:
+            medium: Memory
+            sizeLimit: 64Mi
       containers:
         - name: prowlarr
           image: ghcr.io/onedr0p/prowlarr-develop:1.5.0.3300@sha256:fca3e90493e077cdd572fff32e0b3c977a169447fb1804b7bf7b47486b447898
