--- a/kubernetes/apps/media/radarr/radarr-deploy.yaml
+++ b/kubernetes/apps/media/radarr/radarr-deploy.yaml
@@ -32,8 +32,10 @@ spec:
         - name: movies-volume
           persistentVolumeClaim:
             claimName: radarr-movies-pvc
-        - emptyDir: {}
-          name: tmpvol
+        - name: tmpvol
+          emptyDir:
+            medium: Memory
+            sizeLimit: 64Mi
       containers:
         - name: radarr
           image: ghcr.io/onedr0p/radarr:4.4.4.7068@sha256:44048e41cffcb1ddcf2808bd8c9cfd46aaaadac238699c947ae7a2d6a44296f2
