--- a/kubernetes/infrastructure/kube-system/kustomization.yaml
+++ b/kubernetes/infrastructure/kube-system/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - coredns-custom.yaml
   - azure-secrets-helm-release.yaml # also installs secrets-store-csi-driver
   - reloader-helm-release.yaml
