feat: split secrets into separate deployment

--- a/kubernetes/clusters/develop/secrets.yaml
+++ b/kubernetes/clusters/develop/secrets.yaml
@@ -1,22 +1,20 @@
 # yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: apps-bazarr
+  name: secrets
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 5m0s
   dependsOn:
     - name: namespaces
+    - name: helm
     - name: cluster-settings
-    - name: secrets
-    - name: infrastructure
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./kubernetes/apps/media/bazarr
+  path: ./kubernetes/secrets
   prune: true
-  wait: true
   timeout: 5m0s
   validation: client
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
