--- a/kubernetes/clusters/production/apps.yaml
+++ b/kubernetes/clusters/production/apps.yaml
@@ -10,6 +10,7 @@ spec:
     - name: namespaces
     - name: helm
     - name: cluster-settings
+    - name: secrets
     - name: infrastructure
   sourceRef:
     kind: GitRepository
