--- a/kubernetes/clusters/production/infrastructure.yaml
+++ b/kubernetes/clusters/production/infrastructure.yaml
@@ -10,6 +10,7 @@ spec:
     - name: namespaces
     - name: helm
     - name: cluster-settings
+    - name: secrets
   sourceRef:
     kind: GitRepository
     name: flux-system
