--- a/kubernetes/secrets/kustomization.yaml
+++ b/kubernetes/secrets/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - coredns-custom.yaml
-  - reloader-helm-release.yaml
+  - azure-secrets-helm-release.yaml # also installs secrets-store-csi-driver
+  - reflector-helm-release.yaml
+  - secrets-sync
