--- a/kubernetes/apps/media/mylar3/mylar3-deploy.yaml
+++ b/kubernetes/apps/media/mylar3/mylar3-deploy.yaml
@@ -44,7 +44,7 @@ spec:
         - name: scratch-volume
           emptyDir:
             medium: Memory
-            sizeLimit: 64Mi
+            sizeLimit: 256Mi
       containers:
         - name: mylar3
           image: ghcr.io/cdloh/mylar3:0.7.2@sha256:05ed542e48df9aa722fc20472d2b34818a7848f87b3f11b8463435a2181f1d8b
@@ -67,7 +67,7 @@ spec:
             - name: mylar3-volume
               mountPath: /config
             - name: scratch-volume
-              mountPath: /scratch
+              mountPath: /scratch # temp location for downloading comics
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
