fix: modify ndots
It's impacting mikrotik performance. As per: https://pracucci.com/kubernetes-dns-resolution-ndots-options-and-why-it-may-affect-application-performances.html

--- a/kubernetes/apps/home-automation/home-assistant/hass-deploy.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/hass-deploy.yaml
@@ -38,6 +38,10 @@ spec:
             - name: hass-config
               mountPath: /config/configuration.yaml
               subPath: configuration.yaml
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
 ---
 apiVersion: v1
 kind: Service
