--- a/kubernetes/infrastructure/external/cloudflared-deploy.yaml
+++ b/kubernetes/infrastructure/external/cloudflared-deploy.yaml
@@ -49,6 +49,10 @@ spec:
             capabilities:
               drop:
                 - ALL
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
       volumes:
         - name: creds
           secret:
