--- a/kubernetes/apps/home-automation/mosquitto.yaml
+++ b/kubernetes/apps/home-automation/mosquitto.yaml
@@ -55,6 +55,10 @@ spec:
             capabilities:
               drop:
                 - ALL
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
 ---
 apiVersion: v1
 kind: Service
