--- a/kubernetes/apps/home-automation/ser2sock.yaml
+++ b/kubernetes/apps/home-automation/ser2sock.yaml
@@ -36,6 +36,10 @@ spec:
           volumeMounts:
             - name: ttyusb
               mountPath: /dev/ttyUSB0
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
