--- a/kubernetes/apps/unifi/unifi-deploy.yaml
+++ b/kubernetes/apps/unifi/unifi-deploy.yaml
@@ -64,6 +64,10 @@ spec:
             capabilities:
               drop:
                 - ALL
+      dnsConfig:
+        options:
+          - name: ndots
+            value: "1"
 ---
 kind: Service
 apiVersion: v1
